--- a/spamSMSClassification.ipynb
+++ b/spamSMSClassification.ipynb
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -1102,27 +1102,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of Sparse Matrix (5572, 11425)\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Shape of Sparse Matrix\", messages_bow.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50548"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "messages_bow.nnz #non-zero values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sparsity:  0\n"
+     ]
+    }
+   ],
    "source": [
     "#Fullness\n",
     "sparsity = (100.0 * (messages_bow.nnz/(messages_bow.shape[0]*messages_bow.shape[1])))\n",
@@ -1131,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -1142,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -1153,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -1164,9 +1191,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 9554)\t0.538562626293\n",
+      "  (0, 7186)\t0.438936565338\n",
+      "  (0, 6222)\t0.318721689295\n",
+      "  (0, 6204)\t0.299537997237\n",
+      "  (0, 5261)\t0.297299574059\n",
+      "  (0, 4629)\t0.266198019061\n",
+      "  (0, 4068)\t0.408325899334\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, 11425)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(tfidf4)\n",
     "tfidf4.shape"
@@ -1174,18 +1225,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.9325416070095898"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tfidf_transformer.idf_[bow_transformer.vocabulary_['unconscious']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5572, 11425)\n"
+     ]
+    }
+   ],
    "source": [
     "messages_tfidf = tfidf_transformer.transform(messages_bow)\n",
     "print(messages_tfidf.shape)"
@@ -1193,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -1204,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -1215,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -1226,9 +1296,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted label for 4th SMS:  ham\n",
+      "Actual label for 4th SMS:  ham\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Predicted label for 4th SMS: \",spam_detect_model.predict(tfidf4)[0])\n",
     "print(\"Actual label for 4th SMS: \",messages['labels'][3])"
@@ -1236,9 +1315,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ham' 'ham' 'spam' ..., 'ham' 'ham' 'ham']\n"
+     ]
+    }
+   ],
    "source": [
     "all_predictions = spam_detect_model.predict(messages_tfidf)\n",
     "print(all_predictions)"
@@ -1246,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -1257,9 +1344,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        ham       0.98      1.00      0.99      4825\n",
+      "       spam       1.00      0.85      0.92       747\n",
+      "\n",
+      "avg / total       0.98      0.98      0.98      5572\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#Evaluating the model\n",
     "\n",
@@ -1269,20 +1370,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.cross_validation import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3900 1672 5572\n"
+     ]
+    }
+   ],
    "source": [
     "msg_train, msg_test, label_train, label_test = \\\n",
     "train_test_split(messages['messages'], messages['labels'], test_size=0.3)\n",
@@ -1291,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -1310,16 +1426,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('bag_of_words', CountVectorizer(analyzer=<function text_cleaner at 0x7fcb8a2e5d90>,\n",
+       "        binary=False, decode_error='strict', dtype=<class 'numpy.int64'>,\n",
+       "        encoding='utf-8', input='content', lowercase=True, max_df=1.0,\n",
+       "        max_features=None, min_df=1, ngram_range=(1, 1), prepro...f=False, use_idf=True)), ('classifier', MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True))])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pipeline.fit(msg_train, label_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -1330,9 +1460,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        ham       1.00      0.96      0.98      1497\n",
+      "       spam       0.75      1.00      0.86       175\n",
+      "\n",
+      "avg / total       0.97      0.96      0.97      1672\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(classification_report(predictions, label_test))\n"
    ]
